--- a/assets/views/fragments/artwork.jet.html
+++ b/assets/views/fragments/artwork.jet.html
@@ -53,8 +53,8 @@
               <img src="{{ .User.Avatar }}" alt="{{ .User.Name }}" class="rounded-circle" style="width: 64px; height: 64px;"/>
             </a>
             <div>
-              <h1 class="h3 fw-bold mb-1">{{ .Title }}</h1>
-              <h3 class="h5 mb-0"><a href="/users/{{ .User.ID }}" class="text-muted text-decoration-none">{{ .User.Name }}</a></h3>
+              <h1 class="mb-1">{{ .Title }}</h1>
+              <h3 class="mb-0"><a href="/users/{{ .User.ID }}" class="text-muted text-decoration-none">{{ .User.Name }}</a></h3>
             </div>
           </div>
         </div>
