--- a/assets/views/rank.jet.html
+++ b/assets/views/rank.jet.html
@@ -3,13 +3,13 @@
 {{- import "blocks/pagination" }}
 {{- block body() }}
 <div class="row justify-content-center">
-  <h1 class="h3 fw-bold text-center mb-4">{{ .Title }}</h1>
+  <h1 class="text-center mb-4">{{ .Title }}</h1>
   <div class="col-12">
     <div class="row g-3">
       <div class="col-12 col-lg-9">
         <div class="card border-0">
           <div class="card-body rounded-5 bg-body-tertiary p-4 mb-4">
-            <h2 class="h4 fw-bold mb-3">Ranking options</h2>
+            <h2 class="mb-3">Ranking options</h2>
             <p class="small text-muted">Select ranking modes and filters.</p>
             <!-- TODO: add additional checks to these Switcher buttons to ensure only valid URLs can be generated
                        e.g. selecting the "Ugoira" button hides the buttons under
@@ -31,7 +31,7 @@
               <div class="col-12">
                  <div class="row">
                 <div class="col-12">
-                <h3 class="h5 fw-bold mb-3">Content type</h3>
+                <h3 class="mb-3">Content type</h3>
                 <div class="btn-group d-flex flex-wrap" role="group" aria-label="Content types">
                   {{- path := slice("all", "illust", "manga", "ugoira") }}
                   {{- name := slice("Overall", "Illustrations", "Manga", "Ugoira")}}
@@ -45,10 +45,9 @@
               </div>
             </div>
 
-              <div class="row">
-
+            <div class="row">
               <div class="col-12 col-md-6">
-                <h3 class="h5 fw-bold mb-3">Time frame</h3>
+                <h3 class="mb-3">Time frame</h3>
                 {{ url := "/ranking?content=" + Content +"&date=" + .Data.CurrentDate + "&page=1&mode=" }}
                 {{- if Content != "ugoira" }}
                 <div class="btn-group d-flex flex-wrap" role="group" aria-label="General ranking modes">
@@ -84,7 +83,7 @@
 
               <div class="col-12 col-md-6">
               {{- if Content == "all" }}
-              <h3 class="h5 fw-bold mb-3">Specialized rankings</h3>
+              <h3 class="mb-3">Specialized rankings</h3>
               <div class="btn-group d-flex flex-wrap" role="group" aria-label="Specialized ranking modes">
                 {{ specUrl := "/ranking?content=all&date=" + .Data.CurrentDate + "&page=1&mode=" }}
                 {{- path := slice("original") }}
@@ -115,7 +114,7 @@
 
       <div class="col-12 col-lg-3">
         <div class="card-body rounded-5 bg-body-tertiary p-4 mb-4">
-          <h2 class="h4 fw-bold mb-3">Reset modes</h2>
+          <h2 class="mb-3">Reset modes</h2>
           <p class="small text-muted">You can reset all currently applied ranking modes and filters.</p>
           <div class="d-flex flex-wrap">
             <a href="/ranking" type="button" class="btn btn-danger flex-fill fw-bold rounded-pill">Reset modes</a>
@@ -123,7 +122,7 @@
         </div>
 
         <div class="card border-0 rounded-5 bg-body-tertiary p-4 mb-4">
-          <h2 class="h4 fw-bold mb-3">Date ({{ .Data.CurrentDate }})</h2>
+          <h2 class="mb-3">Date ({{ .Data.CurrentDate }})</h2>
           <p class="small text-muted">Navigate through different dates or view the latest rankings.</p>
           {{ url := "/ranking?content=" + Content + "&mode=" + Mode + "&page=1" }}
           <div class="d-flex flex-wrap mb-2">
