rm more boilerplate

--- a/assets/css/bootstrap-style.css
+++ b/assets/css/bootstrap-style.css
@@ -12023,6 +12023,14 @@ h4, .h4 {
   font-weight: 700;
 }
 
+h5, .h5 {
+  font-weight: 700;
+}
+
+h6, .h6 {
+  font-weight: 700;
+}
+
 /* [data-bs-theme="charcoal"] {
   --bs-body-color: #f5f5f5;
   --bs-body-color-rgb: rgb(245, 245, 245);
