--- a/assets/views/about.jet.html
+++ b/assets/views/about.jet.html
@@ -10,7 +10,7 @@
         <!-- The rest of this column is mostly intended to eliminate weird negative space on this page -->
         <!-- TODO: put actual content here -->
         <!-- The following section is an adapation of Nitter's about page -->
-        <h2 class="h4 fw-bold mb-3">Why use PixivFE?</h2>
+        <h2 class="mb-3">Why use PixivFE?</h2>
         <p>It's impossible to use Pixiv without JavaScript enabled. For privacy-minded folks, preventing JavaScript analytics and IP-based tracking is important, but apart from using a VPN and uBlock/uMatrix, it's impossible. Despite being behind a VPN and using heavy-duty adblockers, you can get accurately tracked with your <a href="https://restoreprivacy.com/browser-fingerprinting/">browser's fingerprint</a>, <a href="https://noscriptfingerprint.com/">no JavaScript required</a>.</p>
         <p>Using an instance of Pixiv, you can browse Pixiv without JavaScript while retaining your privacy. In addition to respecting your privacy, PixivFE is on average around twice as light (in terms of data transfered) than Pixiv, and serves pages faster (e.g. artworks load 2x faster).</p>
         <div class="row">
