--- a/assets/views/rankingCalendar.jet.html
+++ b/assets/views/rankingCalendar.jet.html
@@ -100,12 +100,11 @@
       </div>
     </div>
   </div>
-</div>
 
 <div class="col-12">
   <div class="card border-0">
     <div class="card-body rounded-5 bg-body-tertiary p-4 mb-4">
-      <h2 class="h4 fw-bold mb-4">Calendar ({{ .ThisMonth.MonthLiteral }} {{ .Year }})</h2>
+      <h2 class="mb-4">Calendar ({{ .ThisMonth.MonthLiteral }} {{ .Year }})</h2>
       <div class="row text-center fw-bold mb-3">
         <div class="col">Sun</div>
         <div class="col">Mon</div>
