--- a/assets/css/bootstrap-style.scss
+++ b/assets/css/bootstrap-style.scss
@@ -57,6 +57,12 @@ h4 {
   font-size: $h6-font-size;
   font-weight: $font-weight-bold;
 }
+h5 {
+  font-weight: $font-weight-bold;
+}
+h6 {
+  font-weight: $font-weight-bold;
+}
 
 /* [data-bs-theme="charcoal"] {
   --bs-body-color: #f5f5f5;
