--- a/assets/views/artwork.jet.html
+++ b/assets/views/artwork.jet.html
@@ -14,7 +14,7 @@
           <div class="d-flex justify-content-between align-items-center">
             <a class="text-decoration-none text-light d-flex align-items-center" href="/users/{{ .Illust.User.ID }}">
               <img src="{{ .Illust.User.Avatar }}" alt="{{ .Illust.User.Name }}" class="rounded-circle object-fit-cover me-3" style="width: 48px; height: 48px;">
-              <h2 class="h4 fw-bold m-0">{{ .Illust.User.Name }}</h2>
+              <h2 class="m-0">{{ .Illust.User.Name }}</h2>
             </a>
             {{- combinedUrl := "/artworks-multi/" + joinArtworkIds(.Illust.RecentWorks) }}
             <a href="{{combinedUrl}}" class="custom-btn-secondary">View all</a>
@@ -76,7 +76,7 @@
                   <div class="d-md-flex align-items-center mb-2">
                     <div class="me-md-2">
                       <a href="/users/{{ .AuthorID }}" class="text-body text-decoration-none">
-                        <h6 class="fw-bold mb-0">{{- .AuthorName }}</h6>
+                        <h6 class="mb-0">{{- .AuthorName }}</h6>
                       </a>
                     </div>
                     <div>
@@ -112,7 +112,6 @@
 <!-- TODO: check whether there actually are any related works before rendering this section -->
 <!-- col-12 to display Related works at full width -->
 <div class="col-12">
-    <!-- h2 class="h4 fw-bold mb-0" used to replicate Pixiv headings -->
     <h2 class="mb-4">Related works</h2>
     <!-- Gradually increase the number of artworks shown per row along with device width -->
     <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-4">
