--- a/assets/views/discovery.jet.html
+++ b/assets/views/discovery.jet.html
@@ -2,7 +2,7 @@
 {{- import "blocks/underlinenav" }}
 {{- block body() }}
 <div class="row justify-content-center">
-  <h1 class="h3 fw-bold text-center mb-4">Discover artworks</h1>
+  <h1 class="text-center mb-4">Discover artworks</h1>
 
   <div class="d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-between mx-auto">
     {{- Type := "discovery" }}
