--- a/assets/views/tag.jet.html
+++ b/assets/views/tag.jet.html
@@ -7,19 +7,19 @@
 <div class="row justify-content-center mb-5">
 <div class="col-sm-12 col-md-9">
   <!-- Tag header -->
-  <div class="card mb-4">
-    <div class="card-body p-0">
-      <div class="d-flex flex-column flex-lg-row">
+  <div class="card border-0 mb-4">
+      <div class="row g-0">
         {{- if .Tag.Metadata.ID }}
         <!-- Tag artwork -->
-        <div class="flex-shrink-0 bg-dark-subtle rounded-start p-3">
+        <div class="col-4">
           <a href="/artworks/{{ .Tag.Metadata.ID }}">
-            <img src="{{ .Tag.Metadata.Image }}" alt="{{ .Tag.Name }}" class="img-fluid mx-auto d-block object-fit-cover rounded" />
+            <img src="{{ .Tag.Metadata.Image }}" alt="{{ .Tag.Name }}" class="img-fluid h-100 object-fit-cover rounded-end-0 rounded-5" />
           </a>
         </div>
         {{- end }}
         <!-- Tag information -->
-        <div class="flex-grow-1 p-3">
+        <div class="col-8">
+          <div class="card-body bg-body-tertiary rounded-start-0 rounded-5 p-4">
             <span class="d-flex flex-wrap align-items-center">
                 <h1 class="display-6 fw-bold me-2">#{{ .Tag.Name }}</h1>
                 <span class="h4 text-muted">{{ .Tag.Metadata.Name }}</span>
